# peakranger

./: .gitmodules  CMakeLists.txt  README.md
app/: AppAux.cpp  AppAux.h  CCAT.cpp  CCAT.h  LC.cpp  LC.h  NR.cpp  NR.h  PeakRanger.cpp  PeakRanger.h  Wig.cpp  Wig.h  WigPE.cpp  WigPE.h  bcp.cpp  bcp.h  suite.cpp
bam_app/: LibraryComplexity.cpp  LibraryComplexity.h  OnlineBamApp.cpp  OnlineBamApp.h  OnlineBamAppImp.cpp  OnlineBamAppImp.h  OnlineBamMultiReportApp.cpp  OnlineBamMultiReportApp.h  OnlineBamMultiReportAppImp.cpp  OnlineBamMultiReportAppImp.h  OnlineSortedByNameAppImp.cpp  OnlineSortedByNameAppImp.h  OnlineSortedByNameBamApp.cpp  OnlineSortedByNameBamApp.h  SimpleThresholder.cpp  SimpleThresholder.h  StockBamMultipleDatasetsApp.cpp  StockBamMultipleDatasetsApp.h  StockBamMultipleDatasetsAppImp.cpp  StockBamMultipleDatasetsAppImp.h  WigPEOnline.cpp  WigPEOnline.h
bamtools/: BGZF.cpp  BGZF.h  BamAux.h  BamReader.cpp  BamReader.h
bar/: BGHistStream.cpp  BGHistStream.h  BarAux.cpp  BarAux.h  BarCounter.cpp  BarCounter.h  BarHist.cpp  BarHist.h  RegionCount.cpp  RegionCount.h
common/: boost_header.h  boost_test.h
concepts/: Region.h  RegionInt32.h
doc/: manual.html  manual1.18.html  style.css  template.html  test.html  version_history.html
ggplay/: HtmlAux.cpp  HtmlAux.h  ImgScriptRunner.cpp  ImgScriptRunner.h  LinuxRCmd.cpp  LinuxRCmd.h  chipseqhtmlreporter.cpp  chipseqhtmlreporter.h
math/: distributions.cpp  distributions.h  histogram.h
option_parser/: BCPOption.cpp  BCPOption.h  CCATOption.cpp  CCATOption.h  LCOption.cpp  LCOption.h  NROption.cpp  NROption.h  OptionAux.cpp  OptionAux.h  WigPEOption.cpp  WigPEOption.h  ccatcmdoptionparser.cpp  ccatcmdoptionparser.h  chip4cwigcmdoption.cpp  chip4cwigcmdoption.h  cmd_option_parser.cpp  cmd_option_parser.h  peakranger_cmd_option_parser.cpp  (+5 more)
utils/: log.h  (+16 more)
(+159 files in other folders)
